third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_field_full.exp

Diagnostics:
error: mutable reference in local `inner` requires exclusive access but is borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full.move:34:9
   │
31 │         let c = freeze(inner);
   │                 ------------- previous freeze
32 │         let f1 = &inner.f1;
   │                  --------- previous field borrow
33 │         *c;
34 │         *inner;
   │         ^^^^^^ requirement enforced here
35 │         *f1;
   │         --- conflicting reference `f1` used here
36 │         *inner;
37 │         *c;
   │         -- conflicting reference `c` used here

error: mutable reference in local `inner` requires exclusive access but is borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full.move:36:9
   │
31 │         let c = freeze(inner);
   │                 ------------- previous freeze
   ·
36 │         *inner;
   │         ^^^^^^ requirement enforced here
37 │         *c;
   │         -- conflicting reference `c` used here

error: mutable reference in local `inner` requires exclusive access but is borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full.move:43:9
   │
40 │         let c = id(freeze(inner));
   │                 -----------------
   │                 │  │
   │                 │  previous freeze
   │                 used by call result
41 │         let f1 = &inner.f1;
   │                  --------- previous field borrow
42 │         *c;
43 │         *inner;
   │         ^^^^^^ requirement enforced here
44 │         *f1;
   │         --- conflicting reference `f1` used here
45 │         *inner;
46 │         *c;
   │         -- conflicting reference `c` used here

error: mutable reference in local `inner` requires exclusive access but is borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full.move:45:9
   │
40 │         let c = id(freeze(inner));
   │                 -----------------
   │                 │  │
   │                 │  previous freeze
   │                 used by call result
   ·
45 │         *inner;
   │         ^^^^^^ requirement enforced here
46 │         *c;
   │         -- conflicting reference `c` used here
